# musicbox

./: .gitignore  BluetoothHandler.cpp  BluetoothHandler.h  CMakeLists.txt  ContentHandler.cpp  ContentHandler.h  ContentItem.h  LEDHandler.cpp  LEDHandler.h  MusicHandler.cpp  MusicHandler.h  README.md  RFIDHandler.cpp  RFIDHandler.h  Settings.h  Speaker.cpp  Speaker.h  State.cpp  State.h  TagData.h  TagHandler.cpp  TagHandler.h  WebHandler.cpp  WebHandler.h  main.cpp
cmake/: aarch64-rpi2zero-linux-gnu.cmake
docs/: crosscompilation.md  musicbox.service
webroot/: index.html  package-lock.json  package.json  vite.config.ts
webroot/src/: App.vue  dateformat.ts  router.ts  store.ts
webroot/src/assets/: base.css
webroot/src/components/: Bluetooth.vue  ContentItemComponent.vue  ContentList.vue  FileUpload.vue  MusicBox.vue  PlayerControls.vue  TagDataComponent.vue
webroot/src/types/: ContentItem.ts  TagData.ts
webroot/src/views/: Bluetooth.vue  Content.vue  ContentDetails.vue  Home.vue  Tags.vue
